# aaf

./: LICENSE  README.md
.github/actions/cross-compile-win/: action.yml
.github/workflows/: autobuild-push.yml  autobuild-release-assets.yml
service/: .gitignore  CMakeLists.txt
service/cmake/: build_aaf_lib.cmake  build_aaf_service.cmake  build_aaf_test.cmake
service/include/: AAF_block.h  AAF_buffer.h  arguments_proc.h  dup_handle.h  func_dyn.h  is_admin.h  log_disk.h  qp_timer.h  shared_malloc.h  simple_service.h  zeros_array.h
service/res/: resources.rc.in
service/src/: AAF_block.c  AAF_buffer.c  AAF_test.c  arguments_proc.c  dup_handle.c  func_dyn.c  is_admin.c  log_disk.c  main.c  qp_timer.c  shared_malloc.c  simple_service.c  zeros_array.c  zeros_array_avx2.c  zeros_array_avx512.c
service/targets/: AAF_lib.c  AAF_service.c  AAF_test.c
streamlink/: .gitignore
streamlink/pkgs/streamlink_cli/aligned_alloc/: ctype_def.py  decorators.py  file.py  patch_functions.py  settings.py  utils.py
